# mcp-agent-ot

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
mcpai/: README.md  dashboard.py  main.py  redis_pubsub.py
mcpai/agents/: ingest_agent.py  llm_agent.py  vector_agent.py
mcpai/configs/: data_sources.yml
